Added debug profile to debug in production

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,20 @@ logging:
 server:
   port: ${WEB_API_OPEN_PORT:8080}
 ---
+# additionally turn on (or overwrite) if first start profile ("debug")
+spring:
+  config:
+    activate:
+      on-profile: debug
+logging:
+  level:
+    com:
+      motorbesitzen:
+        rolewatcher:
+          debug
+    web:
+      debug
+---
 # additionally turn on (or overwrite) if first start profile ("firststart")
 spring:
   config:
