--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,10 @@ configurations {
 
 repositories {
     mavenCentral()
-    jcenter()           // JDA repo
+    maven {
+        url 'https://m2.dv8tion.net/releases'
+        name 'm2-dv8tion'
+    }
 }
 
 dependencies {
@@ -26,7 +29,7 @@ dependencies {
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
     // runtime
-    implementation 'net.dv8tion:JDA:4.2.0_227'
+    implementation 'net.dv8tion:JDA:4.2.0_252'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
