--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       ddl-auto: update
     open-in-view: false
   datasource:
-    url: jdbc:h2:file:./data/${DB_DATABASE:database};DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=FALSE;DB_CLOSE_DELAY=-1
+    url: jdbc:h2:file:./data/${DB_DATABASE:database}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
   # Spring can use x threads to handle scheduled events
@@ -68,10 +68,6 @@ spring:
     console:
       enabled: true
       path: /h2
-  sql:
-    init:
-      data-locations: classpath:/data.sql
-      mode: always
 # logging for hibernate activities
 logging:
   level:
